*SVN*

* Document API for create's attributes parameter and provide examples. Closes #7915 [fearoffish]

* Documentation for find incorrectly omits the :conditions option from various examples. Closes #7923 [mattwestcott]

* Document options and add examples for update. Closes #7985 [fearoffish]

* Document options and add examples for delete. Closes #7986 [fearoffish]

* Document options and add examples for destroy. Closes #7988 [fearoffish]

* Document options and add examples for update_all. Closes #7990 [fearoffish]

* Document options for update_counters. Closes #8091 [fearoffish]

* Add documentation about the virtual attribute added by validates_confirmation_of and its behavior. Closes #8815 [JEG2, matt, kampers]

* Add documentation for freeze and readonly related methods. Closes #8878 [pelargir, jeremymcanally]

* Document the timestamps schema definition method. Closes #9000 [mikong]

* Give examples for what tables should be called for models inside a module namespace. Closes #10288 [scott_willson]

* Document the :message option for validates_associated. Closes #10357 [dylans]

* Document automatically generated predicate methods for attributes. Closes #10373 [chuyeow]

* Added ActiveRecord::Base#becomes to turn a record into one of another class (mostly relevant for STIs) [DHH]. Example:

    render :partial => @client.becomes(Company) # renders companies/company instead of clients/client

* Fixed that to_xml should not automatically pass :procs to associations included with :include #10162 [chuyeow]

* Fix documentation typo introduced in [8250]. Closes #10339 [Henrik N]


*2.0.0 [RC2]* (November 28th, 2007)

* Foxy fixtures: support single-table inheritance.  #10234 [tom]

* Foxy fixtures: allow mixed usage to make migration easier and more attractive.  #10004 [lotswholetime]

* Make the record_timestamps class-inheritable so it can be set per model.  #10004 [tmacedo]
